--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.4.10"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.6"
     }
 }
