--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.9",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.14.3",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0.5",
@@ -17,6 +17,18 @@
         "vite": "^5.4.10"
     },
     "dependencies": {
-        "chart.js": "^4.4.6"
+        "chart.js": "^4.4.6",
+        "datatables.net": "^2.1.8",
+        "datatables.net-bs5": "^2.1.8",
+        "datatables.net-buttons": "^3.2.0",
+        "datatables.net-buttons-dt": "^3.2.0",
+        "datatables.net-dt": "^2.1.8",
+        "datatables.net-responsive": "^3.0.3",
+        "datatables.net-responsive-dt": "^3.0.3",
+        "jquery": "^3.7.1",
+        "jszip": "^3.10.1",
+        "moment": "^2.30.1",
+        "pdfmake": "^0.2.15",
+        "toastr": "^2.1.4"
     }
 }
