--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/tinker": "^2.9",
         "yajra/laravel-datatables-buttons": "^11.2",
         "yajra/laravel-datatables-html": "^11.6",
-        "yajra/laravel-datatables-oracle": "11.0"
+        "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
