modification de la vue,edit,index, controller de la  grille_tarifaies

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^4.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "opcodesio/log-viewer": "^3.12",
         "spatie/laravel-permission": "^6.10",
         "yajra/laravel-datatables-buttons": "^11.2",
         "yajra/laravel-datatables-html": "^11.6",
